--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -5,22 +5,22 @@
 #main {
   @include container;
   @include clearfix;
-  margin-top: 2em;
-  padding-left: 1em;
-  padding-right: 1em;
+  margin-top: 0.5em;     /* 2em */ 
+  padding-left: 2em;   /* 2em */
+  padding-right: 2em;  /* 2em */
   animation: intro 0.3s both;
   animation-delay: 0.35s;
 
   @include breakpoint($x-large) {
-    max-width: $x-large;
+    max-width: 80vw;  /* $x-large */
   }
 }
 
 .page {
   @include breakpoint($large) {
-    @include span(10 of 12 last);
-    @include prefix(0.5 of 12);
-    @include suffix(2 of 12);
+    @include span(10 of 12 last);  /* 10 if 12 */
+    @include prefix(0 of 12);    /* 0.5 if 12 */
+    @include suffix(0 of 12);      /* 2 if 12 */
   }
 
   .page__inner-wrap {
@@ -49,7 +49,7 @@
 }
 
 .page__content {
-   text-align: justify; /* added by QY */
+  text-align: justify; /* added by QY */
 
   h2 {
     padding-bottom: 0.5em;
