--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -11,8 +11,8 @@
   @include clearfix;
   margin-top: 0;
   margin-bottom: 0;
-  padding-left: 2em;
-  padding-right: 2em;
+  padding-left: 2em;   /* 2em */
+  padding-right: 2em;  /* 2em */
   font-family: $sans-serif;
   -webkit-animation: intro 0.3s both;
           animation: intro 0.3s both;
@@ -38,7 +38,7 @@
     }
 
     @include breakpoint($x-large) {
-      @include prefix(0.5 of 12);
+      @include prefix(0.5 of 12);   /* 0.5 of 12 */
     }
   }
 
