--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -4,7 +4,7 @@
 
 .page__footer {
   @include clearfix;
-  float: left;
+  float: left;  
   margin-left: 0;
   margin-right: 0;
   width: 100%;
@@ -12,9 +12,9 @@
   /* sticky footer fix start */
   position: absolute;
   bottom: 0em;
-  height: auto;
+  height: auto; /* auto */
   /* sticky footer fix end */
-  margin-top: 3em;
+  margin-top: 3em; /* 3em */
   color: mix(#fff, $gray, 25%);
   -webkit-animation: intro 0.3s both;
           animation: intro 0.3s both;
@@ -25,11 +25,13 @@
 
   footer {
     @include clearfix;
+    text-align: center; /* added by QY */
     margin-left: auto;
     margin-right: auto;
-    margin-top: 2em;
+    margin-top: 0em;  /* 2em */
+    margin-bottom: 0em; /* added by QY */
     max-width: 100%;
-    padding: 0 1em 2em;
+    padding: 0.5em 0em 0.5em 0em; /* 0 1em 2em */
 
     @include breakpoint($x-large) {
       max-width: $x-large;
