--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -95,7 +95,7 @@
 }
 
 .author__content {
-  /*text-align: center;  /* added by QY */ */
+  text-align: left;  /* added by QY */ 
   display: table-cell; 
   vertical-align: top;
   padding-left: 0px;  /* 15px */
@@ -133,7 +133,7 @@
 }
 
 .author__urls-wrapper {
-  /* text-align: center;  /* added by QY */ */
+  text-align: left;  /* added by QY */
   position: relative;
   /* left: 2vw;              /* added by QY */
   display: table-cell;
